# btogre

./: BtOgre.cpp  CMakeLists.txt  README.md
demo/: main.cpp
demo/data/: resources.cfg.in
include/: BtOgre.h  BtOgre.i  BtOgreExtras.h  BtOgreGP.h  BtOgrePG.h
pydemo/: btOgreLayer.cpp  btOgreLayer.h  btOgreLayer.i
pydemo/demo2/: main2.cpp
pydemo/python/: CMakeLists.txt  btogre_sample.py
python/: CMakeLists.txt
